// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`newbie 1`] = `
Object {
  "beforeInsert": Array [],
}
`;

exports[`newbie 2`] = `
Object {
  "afterFirstInsert": Array [
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement",
      "user_id": "[ID]",
    },
  ],
}
`;

exports[`newbie 3`] = `
Object {
  "afterUpdateToggleToValue": Array [
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement",
      "user_id": "[ID]",
    },
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement_toggle",
      "user_id": "[ID]",
    },
  ],
}
`;

exports[`newbie 4`] = `
Object {
  "afterUpdateToggleToNull": Array [
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement",
      "user_id": "[ID]",
    },
  ],
}
`;

exports[`newbie 5`] = `
Object {
  "afterIsVerifiedIsTrue": Array [
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement",
      "user_id": "[ID]",
    },
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement_toggle_boolean",
      "user_id": "[ID]",
    },
  ],
}
`;

exports[`newbie 6`] = `
Object {
  "afterIsVerifiedIsFalse": Array [
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement",
      "user_id": "[ID]",
    },
  ],
}
`;

exports[`newbie 7`] = `
Object {
  "afterIsApprovedTrue": Array [
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement",
      "user_id": "[ID]",
    },
    Object {
      "count": 1,
      "created_at": "[DATE]",
      "id": "[ID]",
      "name": "tg_achievement_boolean",
      "user_id": "[ID]",
    },
  ],
}
`;
